<resources>
    <string name="APP_NAME">地図検索アプリ</string>
    <string name="KEYWORD_HINT">キーワードを入力</string>
    <string name="KEYWORD_EMPTY_MESSAGE">キーワードを入力してください</string>
    <string name="MAP_SHOW">MAP表示</string>
    <string name="HISTORY">履歴</string>
    <string name="DELETE_HISTORY">履歴を削除</string>
    <string name="LOCATION">現在地</string>
    <string name="FINISH">終了</string>
    <string name="LATITUDE">緯度</string>
    <string name="LONGITUDE">経度</string>
    <string name="GPS_ENABLE_MESSAGE">現在位置を取得するためにはGPS機能の有効化が必要です</string>
</resources>